--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/public/listaControl.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Control Stock Ché, el Mate</title>
+    <title>Stock Control</title>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&family=Open+Sans&display=swap" rel="stylesheet" />
   </head>
   <body>
